--- a/app/src/main/res/layout/event_recycle_item.xml
+++ b/app/src/main/res/layout/event_recycle_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
-        android:id="@+id/card_view"
+        android:id="@+id/event_item_view"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="16dp"
