--- a/app/src/main/res/layout/user_recycle_item.xml
+++ b/app/src/main/res/layout/user_recycle_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="4dp"
         android:id="@+id/event_item_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:layout_marginTop="16dp"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintHorizontal_bias="0.0"
@@ -31,6 +31,7 @@
             android:id="@+id/user_recycle_item_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/suer_recycle_item_unknown"
