--- a/app/src/main/res/layout/sign_up_activity.xml
+++ b/app/src/main/res/layout/sign_up_activity.xml
@@ -23,74 +23,82 @@
 
     <EditText
         android:id="@+id/sign_up_uName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/sign_up_name"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_addr"
+        app:layout_constraintEnd_toStartOf="@+id/sign_up_name"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/sign_up_name"
-        android:layout_width="219dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/sign_up_addr"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/sign_up_addr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="86dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="44dp"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/sign_up_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_password"
+        app:layout_constraintEnd_toStartOf="@+id/sign_up_email"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/sign_up_email"
-        android:layout_width="214dp"
-        android:layout_height="41dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="135dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="44dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.964"
+        app:layout_constraintStart_toEndOf="@+id/sign_up_addr" />
 
     <EditText
         android:id="@+id/sign_up_password"
-        android:layout_width="214dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="36dp"
+        android:layout_width="160dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent" />
 
 
@@ -100,11 +108,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="114dp"
         android:layout_marginEnd="112dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="224dp"
         android:text="Sign me up Scotty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
