--- a/app/src/main/res/layout/create_new_event.xml
+++ b/app/src/main/res/layout/create_new_event.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/add_event_description" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_event_add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
